setting up basic pages

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,3 +1,11 @@
+.about {
+  // background-color: #111;
+}
+
+/*
+
+O.G. File
+
 .container {
   padding: 0 2rem;
 }
@@ -126,4 +134,4 @@
   .logo img {
     filter: invert(1);
   }
-}
+} */
