--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,11 @@
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.4rem;
+}
+
 html,
 body {
   padding: 0;
@@ -23,4 +31,37 @@ a {
     color: white;
     background: black;
   }
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0.4em 0;
+  color: #cc527a;
+}
+
+h1 {
+  font-size: 3.6rem;
+}
+
+h2 {
+  font-size: 2.4rem;
+}
+
+h3 {
+  font-size: 1.8rem;
+}
+
+h4 {
+  font-size: 1.6rem;
+}
+
+h5 {
+  font-size: 1.4rem;
+}
+
+h6 {
+  font-size: 1.2rem;
+}
+
+hr {
+  border: 1px dashed #cc527a;
 }
