--- a/styles/Article.module.scss
+++ b/styles/Article.module.scss
@@ -4,36 +4,34 @@
     justify-content: center;
     flex-wrap: wrap;
     max-width: 800px;
-}
 
-.card {
-    margin: 1rem;
-    padding: 1.5rem;
-    text-align: left;
-    color: inherit;
-    text-decoration: none;
-    border: 1px solid #eaeaea;
-    border-radius: 10px;
-    transition: color 0.15s ease, border-color 0.15s ease;
-    max-width: 300px;
-}
+    .article {
+        margin: 1rem;
+        padding: 1.5rem;
+        text-align: left;
+        color: inherit;
+        text-decoration: none;
+        border: 1px solid #eaeaea;
+        border-radius: 10px;
+        transition: color 0.15s ease, border-color 0.15s ease;
+        max-width: 300px;
 
-.card:hover,
-.card:focus,
-.card:active {
-    color: #e8175d;
-    border-color: #e8175d;
-}
+        &:hover, &:focus, &:active {
+            color: #e8175d;
+            border-color: #e8175d;
+        }
 
-.card h2 {
-    margin: 0 0 1rem 0;
-    font-size: 1.5rem;
-}
+        h2 {
+            margin: 0 0 1rem 0;
+            font-size: 1.5rem;
+        }
 
-.card p {
-    margin: 0;
-    font-size: 1.25rem;
-    line-height: 1.5;
+        p {
+            margin: 0;
+            font-size: 1.25rem;
+            line-height: 1.5;
+        }
+    }
 }
 
 @media (max-width: 600px) {
