button, multiple props

--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -11,6 +11,10 @@
   justify-content: flex-start;
   align-items: center;
   color: #A8A7A7;
+
+  button.pink {
+    background-color: #cc527a;
+  }
 }
 
 .footer {
