status with indicators

--- a/styles/Todo.module.scss
+++ b/styles/Todo.module.scss
@@ -8,6 +8,19 @@
     justify-content: space-between;
     align-items: center;
     margin: 0.5rem 0;
+    padding-left: 1rem;
+
+    &.progressing {
+        border-left: 5px solid orange;
+    }
+
+    &.done {
+        border-left: 5px solid green;
+    }
+
+    &.incomplete {
+        border-left: 5px solid red;
+    }
 }
 
 .task_category {
