--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -68,20 +68,32 @@ hr {
 
 input {
   margin: 0.5rem;
-  border: 0;
-  border-radius: 5px;
-  background-color: white;
-}
-
-select {
-  margin: 0.5rem;
+  height: 3rem;
   border: 0;
   border-radius: 5px;
   background-color: white;
   color: grey;
+  font-size: 1.8rem;
+}
+
+select {
+  margin: 0.5rem;
+  height: 3rem;
+  border: 0;
+  border-radius: 5px;
+  background-color: white;
+  color: grey;
+  font-size: 1.8rem;
 }
 
 button {
+  margin: 0.5rem;
   border: 0;
   border-radius: 5px;
+  height: 3rem;
+  &:hover {
+    cursor: pointer;
+    background-color: yellow !important;
+    color: black !important;
+  }
 }
