--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -79,7 +79,7 @@ button {
 }
 
 input {
-  margin: 0.5rem;
+  margin: 0.5rem 0;
   border: 0;
   border-radius: 5px;
   padding: 0.5rem 1rem;
@@ -93,11 +93,11 @@ input {
 }
 
 select {
-  margin: 0.5rem;
-  height: 3rem;
+  margin: 0.5rem 0;
+  height: 1.6em;
   border: 0;
   border-radius: 5px;
-  padding: 0.5rem;
+  padding: 0 0.5rem;
   background-color: white;
   color: grey;
   font-size: 1.8rem;
