--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -67,19 +67,23 @@ hr {
 }
 
 button {
-  margin: 0.5rem;
+  // margin: 0.5rem;
+  height: 3rem;
   border: 0;
   border-radius: 5px;
-  height: 3rem;
+  padding: 0 0.5rem;
+  font-size: 1.8rem;
+
   &:hover {
     cursor: pointer;
-    background-color: steelblue !important;
+    background-color: #cc527a !important;
     color: white !important;
   }
 }
 
 input {
-  margin: 0.5rem 0;
+  // margin: 0.5rem 0;
+  height: 3rem;
   border: 0;
   border-radius: 5px;
   padding: 0.5rem 1rem;
@@ -93,8 +97,8 @@ input {
 }
 
 select {
-  margin: 0.5rem 0;
-  height: 1.6em;
+  // margin: 0.5rem 0;
+  height: 3rem;
   border: 0;
   border-radius: 5px;
   padding: 0 0.5rem;
