--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,13 +14,6 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-@font-face {
-  font-family: 'MrEaves';
-  src: url('../assets/fonts/Mr\ Eaves\ Small\ Caps.otf');
-  font-weight: 400;
-  font-style: normal;
-}
-
 a {
   color: inherit;
   text-decoration: none;
@@ -38,6 +31,13 @@ a {
     color: white;
     background: black;
   }
+}
+
+@font-face {
+  font-family: 'MrEaves';
+  src: url('../assets/fonts/dnd/Mr\ Eaves\ Small\ Caps.otf');
+  font-weight: 400;
+  font-style: normal;
 }
 
 h1, h2, h3, h4, h5, h6 {
