--- a/styles/Account.module.scss
+++ b/styles/Account.module.scss
@@ -1,1 +1,11 @@
 // Just a placeholder for an account page's styling
+
+.font_box {
+    margin: 2rem;
+}
+
+.font_descriptor {
+    margin-bottom: 1rem;
+    font-size: 1.6rem;
+    color: grey;
+}
