--- a/styles/Fonts.module.scss
+++ b/styles/Fonts.module.scss
@@ -1,3 +1,41 @@
+/* D&D Fonts */
+
+@font-face {
+    font-family: 'MrEaves';
+    src: url('../assets/fonts/dnd/Mr\ Eaves\ Small\ Caps.otf');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'ScalaSans';
+    src: url('../assets/fonts/dnd/ScalaSans-Regular.otf');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Bookmania';
+    src: url('../assets/fonts/bookmania/bookmania-regular.otf');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Modesto';
+    src: url('../assets/fonts/modesto/Modesto\ Condensed\ Light.ttf');
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Modesto';
+    src: url('../assets/fonts/modesto/Modesto\ Condensed\ Bold.ttf');
+    font-weight: 700;
+    font-style: normal;
+}
+
+/* Fantasy Language Fonts */
+
 @font-face {
     font-family: 'Norse';
     src: url('../assets/fonts/norse/AnglosaxonRunes.ttf');
@@ -113,6 +151,12 @@
 .draconic, .orc {
     font-family: 'Iokharic', serif;
 }
+.draconic {
+    color: red;
+}
+.orc {
+    color: green;
+}
 
 @font-face {
     font-family: 'Barazhad';
@@ -141,6 +185,12 @@
 
 .infernal, .abyssal {
     font-family: 'Barazhad', serif;
+}
+.abyssal {
+    color: black;
+}
+.infernal {
+    color: red;
 }
 
 @font-face {
