--- a/styles/Article.module.scss
+++ b/styles/Article.module.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .grid {
     display: flex;
     align-items: center;
@@ -17,8 +19,8 @@
         max-width: 300px;
 
         &:hover, &:focus, &:active {
-            color: #e8175d;
-            border-color: #e8175d;
+            color: $secondary;
+            border-color: $secondary;
         }
 
         h2 {
