--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -8,7 +8,8 @@
         padding: 0;
         .item {
             display: inline;
-            font-size: 1.8rem;
+            font-family: $sans;
+            font-size: 1.6rem;
             a {
                 display: inline-block;
                 margin: 1rem;
