--- a/styles/Players.module.scss
+++ b/styles/Players.module.scss
@@ -1,5 +1,12 @@
 @import 'variables';
 
+// .hotbar {
+//     display: flex;
+//     flex-flow: row nowrap;
+//     align-items: flex-end;
+//     justify-content: flex-end;
+// }
+
 .party {
     display: flex;
     flex-flow: column;
@@ -10,26 +17,27 @@
 .player {
     display: flex;
     flex-flow: row nowrap;
+    justify-content: flex-start;
+    width: 90vw;
     border-bottom: solid 2px grey;
     padding: 1rem;
 
     .profile {
         display: flex;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
+        justify-content: center;
 
         border-right: solid 1px grey;
         width: 25rem;
 
-        .name {
-            text-align: center;
-            margin-bottom: 0;
-        }
-
         .profile_image {
             width: 100px;
             height: 100px;
+        }
+
+        h1, h2, h3 {
+            margin: 0;
         }
     }
 
@@ -43,7 +51,7 @@
         width: 16rem;
 
         font-family: $sans;
-        font-size: 3.6rem;
+        font-size: 3.2rem;
 
         > * {
             display: flex;
@@ -53,40 +61,106 @@
             height: 50%;
         }
 
-        .hp {
-            color: $red;
+        .health {
+            position: relative;
+            display: flex;
+            flex-flow: column wrap;
+            .health_pool {
+                display: flex;
+                flex-flow: row nowrap;
+                .hp {
+                    position: relative;
+                    width: 6rem;
+                    height: 6rem;
+                    color: $white;
+    
+                    .number_icon {
+                        position: absolute;
+                        width: 100%;
+                        height: 100%;
+                        z-index: 0;
+                    }
 
-            .temp {
-                color: $blue;
+                    .hp_current {
+                        position: absolute;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        width: 100%;
+                        height: 85%;
+                        z-index: 1;
+                    }
+                }
+
+                .pool_modifiers {
+                    display: flex;
+                    flex-flow: column wrap;
+                    align-items: flex-end;
+                    margin-left: 1rem;
+                    .temp {
+                        // margin-left: 1rem;
+                        color: $blue;
+                    }
+
+                    .max {
+                        display: flex;
+                        flex-flow: row nowrap;
+                        align-items: baseline;
+                        justify-content: baseline;
+                        span {
+                            font-size: small;
+                        }
+                    }
+                }
+            }
+
+            .max {
+                // position: absolute;
+                // bottom: 1.5rem;
+                font-size: 2rem;
             }
         }
 
-        .max {
-            font-size: 2.4rem;
+        .armor {
+            display: flex;
+            flex-direction: column;
+            .ac {
+                position: relative;
+                width: 6rem;
+                height: 6rem;
+    
+                img {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                }
+    
+                .ac_current {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    width: 100%;
+                    height: 85%;
+                    z-index: 1;
+                    font-size: 3rem;
+                }
+            }
+    
+            .armor_note {
+                margin-top: 0.5rem;
+                font-size: 1.4rem;
+            }
         }
-
-        .armor_note {
-            margin-top: 1rem;
-            font-size: 1.6rem;
-        }
-
-        // .health {
-        //     display: inline-block;
-        //     height: 50%;
-        // }
-
-        // .armor {
-        //     display: inline-block;
-        //     height: 50%;
-        // }
     }
 
     .attributes {
         display: flex;
         flex-flow: column;
         width: 30rem;
+        padding: 0.5rem;
+        border-right: 1px solid grey;
+
         font-family: $sans;
-        font-size: 3rem;
 
         .attribute_names {
             display: flex;
@@ -109,7 +183,76 @@
             > * {
                 width: 3rem;
                 height: 4rem;
+                font-size: 3rem;
             }
         }
+
+        .saves {
+            display: flex;
+            flex-flow: row nowrap;
+            align-items: center;
+            justify-content: space-around;
+
+            text-align: center;
+            font-size: small;
+
+            .save {
+                border: 1px solid grey;
+                border-radius: 0.5rem;
+                padding: 0.2rem 0.3rem;
+            }
+        }
+
+        .skill_list {
+            display: flex;
+            flex-flow: row wrap;
+            align-items: flex-start;
+            justify-content: flex-start;
+
+            > * {
+                margin: 0.3rem;
+                border: 1px solid grey;
+                border-radius: 0.5rem;
+                padding: 0.2rem 0.3rem;
+            }
+
+            .expert_skill {
+                border-color: $purple;
+            }
+
+            .proficient_skill {
+                border-color: $blue;
+            }
+
+            .half_proficient_skill {
+                border-color: $green;
+            }
+        }
+    }
+
+    .firepower {
+        display: flex;
+        flex-flow: column wrap;
+
+        width: 30rem;
+        padding: 0 0.5rem;
+        border-right: 1px solid grey;
+    }
+
+    .features_section {
+        display: flex;
+        flex-flow: column wrap;
+
+        width: 30rem;
+        padding: 0 0.5rem;
+        border-right: 1px solid grey;
+    }
+
+    .conditions {
+        display: flex;
+        flex-flow: column wrap;
+
+        width: 30rem;
+        padding: 0 0.5rem;
     }
 }
