--- a/styles/Players.module.scss
+++ b/styles/Players.module.scss
@@ -15,12 +15,25 @@
 }
 
 .player {
+    position: relative;
     display: flex;
     flex-flow: row nowrap;
     justify-content: flex-start;
     width: 90vw;
     border-bottom: solid 2px grey;
     padding: 1rem;
+
+    font-family: $sans;
+
+    .initiative_box {
+        position: absolute;
+        left: 0;
+        top: 5rem;
+
+        .current_init {
+            font-size: 3rem;
+        }
+    }
 
     .profile {
         display: flex;
@@ -50,7 +63,6 @@
         border-right: solid 1px grey;
         width: 16rem;
 
-        font-family: $sans;
         font-size: 3.2rem;
 
         > * {
@@ -150,6 +162,24 @@
                 margin-top: 0.5rem;
                 font-size: 1.4rem;
             }
+        }
+    }
+
+    .secondary_stats {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        border-right: solid 1px grey;
+        width: 10rem;
+
+        h3 {
+            margin-bottom: 0;
+        }
+
+        div {
+            font-size: 2rem;
         }
     }
 
