--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -39,6 +39,19 @@ $darkpink: #e8175d;
 .very-rare { color: $dnd-veryrare; }
 .legendary { color: $dnd-legendary; }
 
+.border-red { border-color: $red; }
+.border-brown { border-color: $brown; }
+.border-orange { border-color: $orange; }
+.border-pink { border-color: $pink; }
+.border-blue { border-color: $blue; }
+.border-green { border-color: $green; }
+.border-purple { border-color: $purple; }
+.border-gold { border-color: $gold; }
+.border-uncommon { border-color: $dnd-uncommon; }
+.border-rare { border-color: $dnd-rare; }
+.border-very-rare { border-color: $dnd-veryrare; }
+.border-legendary { border-color: $dnd-legendary; }
+
 /* Theme Colours */
 
 $primary: $pink;
