--- a/styles/Players.module.scss
+++ b/styles/Players.module.scss
@@ -261,7 +261,7 @@
 
         width: 30rem;
         padding: 0 0.5rem;
-        border-right: 1px solid grey;
+        border-right: 1px solid $grey;
 
         h3 {
             margin-top: 0;
@@ -278,6 +278,94 @@
 
                 .attack_name {
                     font-weight: bold;
+                }
+            }
+        }
+    }
+
+    .spellcasting {
+        .spells {
+
+        }
+        .spell_levels {
+            .spell_row {
+                display: flex;
+                flex-flow: row nowrap;
+                // align-items: center;
+                justify-content: flex-end;
+                gap: 0.5rem;
+                height: 2rem;
+
+                .level_slots {
+                    display: flex;
+                    flex-flow: row nowrap;
+                    gap: 0.2rem;
+
+                    .spellslot {
+                        display: inline-block;
+                        position: relative;
+                        padding-left: 1.4rem;
+                        // margin-bottom: 12px;
+                        cursor: pointer;
+                        font-size: 1.6rem;
+                        -webkit-user-select: none;
+                        -moz-user-select: none;
+                        -ms-user-select: none;
+                        user-select: none;
+    
+                        > input {
+                            position: absolute;
+                            opacity: 0;
+                            cursor: pointer;
+                            height: 0;
+                            width: 0;
+    
+                            &:checked {
+                                ~ .checkmark {
+                                    background-color: $red;
+    
+                                    &:after {
+                                        display: block;
+                                        width: 100%;
+                                        height: 100%;
+
+                                        content: "";
+                                        border: solid $grey;
+                                        border-width: 0 0.2rem 0 0;
+                                        -webkit-transform: rotate(45deg);
+                                        -ms-transform: rotate(45deg);
+                                        transform: rotate(45deg);
+                                    }
+                                }
+                            }
+                        }
+    
+                        > span {
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            height: 1.4rem;
+                            width: 1.4rem;
+                            background-color: $grey;
+    
+                            &:after {
+                                content: "4";
+                                position: absolute;
+                                display: none;
+                                text-align: center;
+                            }
+                        }
+    
+                        &:hover {
+                            .checkmark {
+                                background-color: $blue;
+                            }
+                        }
+                    }
+                }
+
+                .spell_level {
+                    display: inline;
                 }
             }
         }
@@ -303,10 +391,37 @@
                 justify-content: space-between;
                 margin-right: 1rem;
 
+                .activation {
+                    border-width: 1px;
+                    border-style: solid;
+                    border-radius: 2rem;
+                    padding: 0.1rem 0.5rem;
+                    text-align: center;
+                    color: $white;
+
+                    &.red {
+                        background-color: $red;
+                        border-color: $red;
+                    }
+                    &.blue {
+                        background-color: $blue;
+                        border-color: $blue;
+                    }
+                    &.orange {
+                        background-color: $orange;
+                        border-color: $orange;
+                    }
+                    &.purple {
+                        background-color: $purple;
+                        border-color: $purple;
+                    }
+                }
+
                 .uses {
                     display: inline-block;
 
                     input {
+                        width: 1.4rem;
                         margin: 0 0.2rem;
                     }
                 }
