--- a/styles/Players.module.scss
+++ b/styles/Players.module.scss
@@ -324,18 +324,18 @@
                                 ~ .checkmark {
                                     background-color: $red;
     
-                                    &:after {
-                                        display: block;
-                                        width: 100%;
-                                        height: 100%;
+                                    // &:after {
+                                    //     display: block;
+                                    //     width: 100%;
+                                    //     height: 100%;
 
-                                        content: "";
-                                        border: solid $grey;
-                                        border-width: 0 0.2rem 0 0;
-                                        -webkit-transform: rotate(45deg);
-                                        -ms-transform: rotate(45deg);
-                                        transform: rotate(45deg);
-                                    }
+                                    //     content: "";
+                                    //     border: solid $grey;
+                                    //     border-width: 0 0.2rem 0 0;
+                                    //     -webkit-transform: rotate(45deg);
+                                    //     -ms-transform: rotate(45deg);
+                                    //     transform: rotate(45deg);
+                                    // }
                                 }
                             }
                         }
