pb and hitSection

--- a/styles/Players.module.scss
+++ b/styles/Players.module.scss
@@ -227,7 +227,7 @@
                 padding: 0.2rem 0.3rem;
 
                 &.proficient {
-                    border: 1px solid $green;
+                    border: 1px solid $blue;
                 }
             }
         }
