--- a/styles/Players.module.scss
+++ b/styles/Players.module.scss
@@ -279,6 +279,7 @@
                 flex-flow: row wrap;
                 align-items: center;
                 justify-content: flex-start;
+                height: 2.5rem;
 
                 .attack_name {
                     font-weight: bold;
@@ -295,23 +296,23 @@
             .spell_row {
                 display: flex;
                 flex-flow: row nowrap;
-                // align-items: center;
+                align-items: center;
                 justify-content: flex-end;
                 gap: 0.5rem;
-                height: 2rem;
 
                 .level_slots {
                     display: flex;
                     flex-flow: row nowrap;
+                    align-items: center;
                     gap: 0.2rem;
 
                     .spellslot {
+                        height: 100%;
                         display: inline-block;
                         position: relative;
                         padding-left: 1.4rem;
                         // margin-bottom: 12px;
                         cursor: pointer;
-                        font-size: 1.6rem;
                         -webkit-user-select: none;
                         -moz-user-select: none;
                         -ms-user-select: none;
@@ -346,7 +347,7 @@
     
                         > span {
                             position: absolute;
-                            top: 0;
+                            top: -0.5rem;
                             left: 0;
                             height: 1.4rem;
                             width: 1.4rem;
@@ -369,7 +370,9 @@
                 }
 
                 .spell_level {
-                    display: inline;
+                    display: inline-block;
+                    width: 1rem;
+                    font-size: 1.5rem;
                 }
             }
         }
@@ -393,6 +396,7 @@
                 flex-flow: row nowrap;
                 align-items: center;
                 justify-content: space-between;
+                height: 3rem;
                 margin-right: 1rem;
 
                 .activation {
