--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -34,6 +34,7 @@ $darkpink: #e8175d;
 .green { color: $green; }
 .purple { color: $purple; }
 .gold { color: $gold; }
+.common { color: $white; }
 .uncommon { color: $dnd-uncommon; }
 .rare { color: $dnd-rare; }
 .very-rare { color: $dnd-veryrare; }
