damage buttons & types

--- a/styles/Players.module.scss
+++ b/styles/Players.module.scss
@@ -479,3 +479,9 @@
         padding: 0 0.5rem;
     }
 }
+
+.damage_button {
+    margin-left: 0.3rem;
+    padding: 0.3rem 0.5rem;
+    font-size: 1.4rem;
+}
