--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -70,10 +70,9 @@ hr {
 }
 
 button {
-  height: 3rem;
   border: 0;
   border-radius: 5px;
-  padding: 0 0.5rem;
+  padding: 0.5rem;
   font-size: 1.8rem;
 
   &:hover {
